src/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrderId</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductId</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderItem</label>
    <nameField>
        <label>OrderItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>